--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,12 +196,19 @@ h1 {
 .header {
     position: relative;
 }
+/*.agile-top-header {*/
+    /*position: absolute;*/
+    /*z-index: 999;*/
+    /*top: 3%;*/
+    /*left: 10%;*/
+	/*width:80%;*/
+/*}*/
+/* custom changing*/
 .agile-top-header {
-    position: absolute;
-    z-index: 999;
-    top: 3%;
-    left: 10%;
-	width:80%;
+    position: relative;
+	width:100%;
+    padding-left: 26px;
+    padding-right: 26px;
 }
 .top-nav {
     float: left;
