--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -32,7 +32,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="header">
 	<div class="agile-top-header">
 		<div class="logo">
-			<a href="index.html"><h1><label>I</label>nternal</h1></a>
+			<a href="index.html">
+                <img src="{%  static 'images/logo.png' %}" class="logo_img" alt="">
+{#                <h1>#}
+{#                    <label>I</label>nternal#}
+{#                </h1>#}
+            </a>
 		</div>
 		<!-- navigation -->
 		<div class="top-left">
@@ -228,86 +233,86 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--//services-->
 
 <!--products-->
-<div class="agile-prod" id="products">
-	<div class="container">
-		<h3>Products</h3>
-		<div class="agile-prod1">
-			<div class="agile-sub">
-				<h4>our products</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="agile-img">
-				<img src=" {%  static 'images/p1.jpg' %}" alt="image">
-			</div>
-		</div>
-		<div class="agile-prod2">
-			<img src="{%  static 'images/p2.jpg' %}" alt="image">
-			<div class="agile-info">
-				<h4>our products</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="agile-info-img">
-				<img src="{%  static 'images/p4.jpg' %}" alt="image">
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="clearfix"> </div>
-	</div>
-</div>
-<!--//products-->
-
-<!-- team -->
-<div class="team-page" id="team">
-	<div class="container">
-		<h3 class="title"> Our Team</h3>
-		<div class="col-md-4 about-poleft t1">
-            <div class="about_img"><img src="{%  static 'images/t1.jpg' %}" alt="">
-              <h5>Victoria</h5>
-              <div class="about_opa">
-				<p>Manager</p>
-                <ul class="fb_icons2 text-center">
-					<li><a class="fa fa-facebook" href="#"></a></li>
-					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-google" href="#"></a></li>
-					<li><a class="fa fa-linkedin" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
-				</ul>
-              </div>
-            </div>
-        </div>
-		<div class="col-md-4 about-poleft t2">
-            <div class="about_img"><img src="{%  static 'images/t2.jpg' %}" alt="">
-              <h5>Darponia</h5>
-              <div class="about_opa">
-                <p>Designer</p>
-                <ul class="fb_icons2 text-center">
-					<li><a class="fa fa-facebook" href="#"></a></li>
-					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-google" href="#"></a></li>
-					<li><a class="fa fa-linkedin" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
-				</ul>
-              </div>
-            </div>
-        </div>
-		<div class="col-md-4 about-poleft t3">
-            <div class="about_img"><img src="{%  static 'images/t3.jpg' %}" alt="">
-              <h5>Patricka</h5>
-              <div class="about_opa">
-                <p>Assistant</p>
-                <ul class="fb_icons2 text-center">
-					<li><a class="fa fa-facebook" href="#"></a></li>
-					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-google" href="#"></a></li>
-					<li><a class="fa fa-linkedin" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
-				</ul>
-              </div>
-            </div>
-        </div>
-		<div class="clearfix"></div>
-	</div>
-</div>
+{#<div class="agile-prod" id="products">#}
+{#	<div class="container">#}
+{#		<h3>Products</h3>#}
+{#		<div class="agile-prod1">#}
+{#			<div class="agile-sub">#}
+{#				<h4>our products</h4>#}
+{#				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>#}
+{#			</div>#}
+{#			<div class="agile-img">#}
+{#				<img src=" {%  static 'images/p1.jpg' %}" alt="image">#}
+{#			</div>#}
+{#		</div>#}
+{#		<div class="agile-prod2">#}
+{#			<img src="{%  static 'images/p2.jpg' %}" alt="image">#}
+{#			<div class="agile-info">#}
+{#				<h4>our products</h4>#}
+{#				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>#}
+{#			</div>#}
+{#			<div class="agile-info-img">#}
+{#				<img src="{%  static 'images/p4.jpg' %}" alt="image">#}
+{#			</div>#}
+{#			<div class="clearfix"> </div>#}
+{#		</div>#}
+{#		<div class="clearfix"> </div>#}
+{#	</div>#}
+{#</div>#}
+{#<!--//products-->#}
+{##}
+{#<!-- team -->#}
+{#<div class="team-page" id="team">#}
+{#	<div class="container">#}
+{#		<h3 class="title"> Our Team</h3>#}
+{#		<div class="col-md-4 about-poleft t1">#}
+{#            <div class="about_img"><img src="{%  static 'images/t1.jpg' %}" alt="">#}
+{#              <h5>Victoria</h5>#}
+{#              <div class="about_opa">#}
+{#				<p>Manager</p>#}
+{#                <ul class="fb_icons2 text-center">#}
+{#					<li><a class="fa fa-facebook" href="#"></a></li>#}
+{#					<li><a class="fa fa-twitter" href="#"></a></li>#}
+{#					<li><a class="fa fa-google" href="#"></a></li>#}
+{#					<li><a class="fa fa-linkedin" href="#"></a></li>#}
+{#					<li><a class="fa fa-pinterest-p" href="#"></a></li>#}
+{#				</ul>#}
+{#              </div>#}
+{#            </div>#}
+{#        </div>#}
+{#		<div class="col-md-4 about-poleft t2">#}
+{#            <div class="about_img"><img src="{%  static 'images/t2.jpg' %}" alt="">#}
+{#              <h5>Darponia</h5>#}
+{#              <div class="about_opa">#}
+{#                <p>Designer</p>#}
+{#                <ul class="fb_icons2 text-center">#}
+{#					<li><a class="fa fa-facebook" href="#"></a></li>#}
+{#					<li><a class="fa fa-twitter" href="#"></a></li>#}
+{#					<li><a class="fa fa-google" href="#"></a></li>#}
+{#					<li><a class="fa fa-linkedin" href="#"></a></li>#}
+{#					<li><a class="fa fa-pinterest-p" href="#"></a></li>#}
+{#				</ul>#}
+{#              </div>#}
+{#            </div>#}
+{#        </div>#}
+{#		<div class="col-md-4 about-poleft t3">#}
+{#            <div class="about_img"><img src="{%  static 'images/t3.jpg' %}" alt="">#}
+{#              <h5>Patricka</h5>#}
+{#              <div class="about_opa">#}
+{#                <p>Assistant</p>#}
+{#                <ul class="fb_icons2 text-center">#}
+{#					<li><a class="fa fa-facebook" href="#"></a></li>#}
+{#					<li><a class="fa fa-twitter" href="#"></a></li>#}
+{#					<li><a class="fa fa-google" href="#"></a></li>#}
+{#					<li><a class="fa fa-linkedin" href="#"></a></li>#}
+{#					<li><a class="fa fa-pinterest-p" href="#"></a></li>#}
+{#				</ul>#}
+{#              </div>#}
+{#            </div>#}
+{#        </div>#}
+{#		<div class="clearfix"></div>#}
+{#	</div>#}
+{#</div>#}
 <!-- //team -->
 
 <!-- gallery -->
