--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -7,8 +7,7 @@
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Internal Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Burraq Marketing, marketing, Real estate, Real Estate Lahore, Alhayat residencia" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--// Meta tag Keywords -->
@@ -43,8 +42,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="top-left">
 			<div class="top-icons">
 				<ul>
-					<li><a href="#" class="fa fa-facebook"> </a></li>
-					<li><a href="#" class="fa fa-twitter"> </a></li>
+					<li><a href="https://web.facebook.com/burraqmarketing1/" target="_blank" class="fa fa-facebook"> </a></li>
+					<li><a href="https://twitter.com/buraqmarketing" target="_blank" class="fa fa-twitter"> </a></li>
 					<li><a href="#" class="fa fa-google"> </a></li>
 					<li><a href="#" class="fa fa-linkedin" ></a></li>
 					<li><a href="#" class="fa fa-pinterest-p" ></a></li>
@@ -68,8 +67,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<li><a href="index.html" class="scroll tabs-color"><span>Home</span></a></li>
 								<li><a href="#about" class="scroll tabs-color"><span>About</span></a></li>
 								<li><a href="#services" class="scroll tabs-color"><span>Services</span></a></li>
-								<li><a href="#products" class="scroll tabs-color"><span>Products</span></a></li>
-								<li><a href="#team" class="scroll tabs-color"><span>Our Team</span></a></li>
 								<li><a href="#gallery" class="scroll tabs-color"><span>Gallery</span></a></li>
 								<li><a href="#contact" class="scroll tabs-color"><span>Contact Us</span></a></li>
 							</ul>
@@ -132,7 +129,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				<h5>Luxury Designs</h5>
 				<div class="agile_count_grid_right">
-					<p class="counter">2678</p> 
+					<p class="counter">160</p>
 				</div>
 				<div class="clearfix"> </div>
 				
@@ -143,7 +140,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				<h5>Happy Clients</h5>
 				<div class="agile_count_grid_right">
-					<p class="counter">768</p> 
+					<p class="counter">35</p>
 				</div>
 				<div class="clearfix"> </div>
 				
@@ -154,7 +151,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				<h5>Followers</h5>
 				<div class="agile_count_grid_right">
-					<p class="counter">1674</p> 
+					<p class="counter">570</p>
 				</div>
 				<div class="clearfix"> </div>
 				
@@ -165,7 +162,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 				<h5>Our Sponsors</h5>
 				<div class="agile_count_grid_right">
-					<p class="counter">806</p> 
+					<p class="counter">10</p>
 				</div>
 				<div class="clearfix"> </div>
 				
