--- a/burraq/templates/success.html
+++ b/burraq/templates/success.html
@@ -1,1 +1,37 @@
-<h1>Success! Email sent.</h1>
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link  rel="stylesheet"  href="{% static 'css/style.css' %} "type="text/css" media="all">
+    <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet" type="text/css" media="all">
+    <link href="{% static 'css/font-awesome.min.css' %} " rel="stylesheet" type="text/css" media="all">
+    <!-- //css files -->
+    <!-- online-fonts -->
+    <link href="//fonts.googleapis.com/css?family=Gudea:400,400i,700&subset=latin-ext" rel="stylesheet">
+    <!--// online-fonts -->
+    <!-- js -->
+    <script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js' %} "></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap-3.1.1.min.js' %} "></script>
+
+{% endblock %}
+{% block content %}
+<div class="modal fade text-center py-5" style="top:30px" id="thanksModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="{%  static 'images/logo.png' %}" class="modal-img">
+                <h3 class="pt-5 mb-0 text-secondary">Thanks for your love and support!</h3>
+                <p class="pb-3 text-muted"><small>Hope that you enjoy it well! Check also our site</small></p>
+                <a role="button" class="btn btn-secondary text-white mb-3" href="http://127.0.0.1:8000/home" target="_blank">http://127.0.0.1:8000/home</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <script>
+        $(window).on('load', function() {
+    $('#thanksModal').modal('show');
+});
+    </script>
+{% endblock %}
+
+
