--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -23,6 +23,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!--// online-fonts -->
     <!-- js -->
     <script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js' %} "></script>
+{#    <script src="{%  static 'js/lightbox-plus-jquery.min.js' %}"> </script>#}
+{#    <link rel="stylesheet" href="{%  static 'css/lightbox.css' %}">#}
+
     <script type="text/javascript" src="{% static 'js/bootstrap-3.1.1.min.js' %} "></script>
 
 {% endblock %}
@@ -242,11 +245,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		 <h3>Gallery</h3>
 
         <div align="center">
-            <button class="btn btn-default filter-button" data-filter="all">All Projects</button>
+            <button class="filter-button custom-buttons" data-filter="all">All Projects</button>
 
             {% for foo in folders %}
                 {% if foo %}
-                    <button class="btn btn-default filter-button" data-filter="{{ foo.title|cut:" " }}">{{ foo.title }}</button>
+                    <button class=" filter-button custom-buttons" data-filter="{{ foo.title|cut:" " }}">{{ foo.title }}</button>
                 {% endif %}
             {% endfor %}
         </div>
@@ -281,16 +284,29 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<div class="contact" id="contact">
 		<div class="container">
 			<h3>Contact Us</h3>
-            <form method="post" class="contact_form" action="{% url 'indexView' %}">
+{#            <form method="post" id="contactform" class="contact_form" action="{% url 'indexView' %}">#}
+            <form method="post" id="contactform" class="contact_form" action="{% url 'indexView' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <div class="form-actions">
-                    <input type="submit" class="more_btn" value="Send Message">
-{#                  <button type="submit" class="more_btn">Send Message</button>#}
+                    <input type="submit" class="more_btn" value="Send Message" data-toggle="modal" aria-labelledby="thanksModal">
                 </div>
             </form>
 		</div>
 	</div>
+
+    <div class="modal fade text-center py-5" style="top:30px" id="thanksModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="{%  static 'images/logo.png' %}" class="modal-img">
+                <h3 class="pt-5 mb-0 text-secondary">Thanks for your love and support!</h3>
+                <p class="pb-3 text-muted"><small>Hope that you enjoy it well! Check also our site</small></p>
+                <a role="button" class="btn btn-secondary text-white mb-3" href="http://127.0.0.1:8000/home" target="_blank">http://127.0.0.1:8000/home</a>
+            </div>
+        </div>
+    </div>
+    </div>
 <!-- //newsletter -->
 <!-- footer -->
 	<div class="footer">
@@ -302,28 +318,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                     values in the past for our investors and clients, which further more enhanced our professionalism in the market. Our project like <b>Al-Hayat Center</b> and <b>Al-Hayat Residencia</b>
                     , symbolizes our great achievement in current market</p>
 			</div>
-{#			<div class="col-md-4 agileinfo_footer_grid">#}
-{#				<h4>Instagram Posts</h4>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f1.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f2.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f3.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f4.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f5.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="agileinfo_footer_grid1">#}
-{#					<a href="#"><img src="{%  static 'images/f6.jpg' %}" alt=" " class="img-responsive"></a>#}
-{#				</div>#}
-{#				<div class="clearfix"> </div>#}
-{#			</div>#}
 			<div class="col-md-6 agileinfo_footer_grid">
 				<h4>Address</h4>
 				<ul>
@@ -351,7 +345,29 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 <!-- js files -->
 	<!-- Starts-Number-Scroller-Animation-JavaScript -->
-					<script src="{%  static 'js/waypoints.min.js' %}"></script>
+	<script type="text/javascript">
+        $(document).on('submit', '#contactform', function(e){
+           e.preventDefault();
+
+           $.ajax({
+               type: 'POST',
+               url: '{% url 'indexView' %}',
+               data: {
+                   from_email: $('#id_from_email').val(),
+                   subject: $('#id_subject').val(),
+                   message: $('#id_message').val(),
+                   'csrfmiddlewaretoken': '{{ csrf_token }}'
+               },
+               success:function () {
+                   $("#contactform")[0].reset();
+                    $('#thanksModal').modal('show');
+
+               }
+           });
+        });
+    </script>
+
+    <script src="{%  static 'js/waypoints.min.js' %}"></script>
 					<script src="{%  static 'js/counterup.min.js' %}"></script>
 					<script>
 						jQuery(document).ready(function( $ ) {
@@ -365,9 +381,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		
 		
 	<!-- js -->
-	<script src="{%  static 'js/lightbox-plus-jquery.min.js' %}"> </script>
-		<link rel="stylesheet" href="{%  static 'css/lightbox.css' %}">
-	<script type="text/javascript" src=" {%  static 'js/jquery-2.1.4.min.js' %}"></script>
+{#    <script src="{%  static 'js/lightbox-plus-jquery.min.js' %}"> </script>#}
+    <link rel="stylesheet" href="{%  static 'css/lightbox.css' %}">
 	<!-- //js -->
 
 	 <script src="{%  static 'js/responsiveslides.min.js' %}"></script>
