--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,3 +21,18 @@
     padding: 5px;
     background: black;
 }
+.custom-buttons{
+    padding: 10px 22px;
+    border: 2px solid #efbe0c;
+    font-size: 16px;
+    color: #fff;
+    background: #212121 ;
+    text-decoration: none;
+    outline: none;
+    margin-top: 12px;
+    cursor: pointer;
+}
+
+.custom-buttons:hover{
+    color: yellow;
+}
