--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,13 +24,14 @@
 .custom-buttons{
     padding: 10px 22px;
     border: 2px solid #efbe0c;
-    font-size: 16px;
     color: #fff;
     background: #212121 ;
     text-decoration: none;
     outline: none;
-    margin-top: 12px;
+    /*margin-top: 12px;*/
     cursor: pointer;
+    border-radius: 5px;
+    font-size: 14px;
 }
 
 .custom-buttons:hover{
