--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -396,7 +396,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		
 		
 	<!-- js -->
-{#    <script src="{%  static 'js/lightbox-plus-jquery.min.js' %}"> </script>#}
+    <script src="{%  static 'js/lightbox-plus-jquery.min.js' %}"> </script>
     <link rel="stylesheet" href="{%  static 'css/lightbox.css' %}">
 	<!-- //js -->
 
